--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* :root{
+    --isActiveMOdal: none;
+}
+
+
+body::after {
+    display: var( --isActiveMOdal);
+    position: absolute;
+    top:0;
+    left: 0;
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0,0.5);
+} */
